# src/main/webapp/doc/api-doc.yaml
@@ -7,7 +7,7 @@ info:
     To Authorize you can use API token that you can create in Aquality Tracking Administration
     - As user name you should use `project:{your project id}`
     - As password you should use API token
-  version: '0.3.11'
+  version: '0.3.12'
   title: 'Aquality Tracking - API documentation'
 
 servers:
@@ -58,6 +58,8 @@ tags:
     description: 'Get Auth info'
   - name: 'audit'
     description: 'Operations with audits'
+  - name: 'survey'
+    description: 'Operations with surveys'
 
 paths:
   /public/suite/create-or-update:
@@ -936,6 +938,77 @@ paths:
       responses:
         200:
           description: 'Project was removed'
+  /questions:
+    get:
+      tags:
+        - 'questions'
+      summary: 'Get All Questions'
+      description: 'Get All Questions'
+      produces:
+        - 'application/json'
+      parameters:
+        - in: query
+          name: id
+          schema:
+            type: integer
+        - in: query
+          name: status_id
+          schema:
+            type: integer
+        - in: query
+          name: category_id
+          schema:
+            type: integer
+        - in: query
+          name: min_qual_id
+          schema:
+            type: integer
+        - in: query
+          name: max_qual_id
+          schema:
+            type: integer
+        - in: query
+          name: approver_id
+          schema:
+            type: integer
+        - in: query
+          name: creater_id
+          schema:
+            type: integer
+      responses:
+        200:
+          description: 'Valid response'
+          schema:
+            $ref: '#definitions/Question'
+          examples:
+            application/json: |
+              [
+                {
+                  "color": 1,
+                  "name": "Failed",
+                  "id": 1
+                },
+                {
+                  "color": 5,
+                  "name": "Passed",
+                  "id": 2
+                },
+                {
+                  "color": 3,
+                  "name": "Not Executed",
+                  "id": 3
+                },
+                {
+                  "color": 2,
+                  "name": "In Progress",
+                  "id": 4
+                },
+                {
+                  "color": 4,
+                  "name": "Pending",
+                  "id": 5
+                }
+              ]
   /result_resolution:
     get:
       tags:
@@ -2259,3 +2332,51 @@ definitions:
         type: integer
         example: 1
         description: 'Total results number with not assigned resolutions'
+  QuestionStatus:
+    type: object
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+      color:
+        type: string
+  QuestionCategory:
+    type: object
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+  Qualification:
+    type: object
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+      order:
+        type: integer
+  Question:
+    type: object
+    properties:
+      id:
+        type: integer
+      status_id:
+        type: integer
+      created:
+        type: string
+      category_id:
+        type: integer
+      min_qual_id:
+        type: integer
+      max_qual_id:
+        type: integer
+      question:
+        type: string
+      answer:
+        type: string
+      approver_id:
+         type: integer
+      creator_id:
+        type: integer
